kubernetes/mongo.yml
#### mongo #####
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo
  name: mongo
  namespace: cpg-examples-patient-community
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - image: mongo
          imagePullPolicy: Always
          name: mongo
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: cpg-examples-patient-community
spec:
  ports:
    - port: 27001
      protocol: TCP
      targetPort: 27017
  selector:
    app: mongo
