kubernetes/auth-service.yml
#### auth-service #####
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth-service
  name: auth-service
  namespace: cpg-examples-patient-community
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - image: ghcr.io/clouditor/examples-auth-service-v1
          imagePullPolicy: Always
          name: auth-service
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: cpg-examples-patient-community
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: rest
  selector:
    app: auth-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
  name: auth-service
  namespace: cpg-examples-patient-community
spec:
  rules:
    - host: auth-service-v1.aks.clouditor.io
      http:
        paths:
          - backend:
              serviceName: auth-service
              servicePort: rest
            path: /
