kubernetes/disease-service.yml
#### disease-service #####
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: disease-service
  name: disease-service
  namespace: cpg-examples-patient-community
spec:
  replicas: 1
  selector:
    matchLabels:
      app: disease-service
  template:
    metadata:
      labels:
        app: disease-service
    spec:
      containers:
        - image: ghcr.io/clouditor/examples-disease-service-v1
          imagePullPolicy: Always
          name: disease-service
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: disease-service
  namespace: cpg-examples-patient-community
spec:
  ports:
    - port: 8086
      protocol: TCP
      targetPort: 8086
      name: rest
  selector:
    app: disease-service
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
  name: disease-service
  namespace: cpg-examples-patient-community
spec:
  rules:
    - host: disease-service-v1.aks.clouditor.io
      http:
        paths:
          - backend:
              serviceName: disease-service
              servicePort: rest
            path: /
