kubernetes/frontend.yml
#### frontend #####
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: cpg-examples-patient-community
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: ghcr.io/clouditor/examples-frontend-v1
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cpg-examples-patient-community
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
      name: rest
  selector:
    app: frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
  name: frontend
  namespace: cpg-examples-patient-community
spec:
  rules:
    - host: frontend-v1.aks.clouditor.io
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: rest
            path: /
