kubernetes/group-phr-controller.yml
#### group-phr-controller #####
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: group-phr-controller
  name: group-phr-controller
  namespace: cpg-examples-patient-community
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group-phr-controller
  template:
    metadata:
      labels:
        app: group-phr-controller
    spec:
      containers:
        - image: ghcr.io/clouditor/examples-group-phr-controller-v1
          imagePullPolicy: Always
          name: group-phr-controller
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: group-phr-controller
  namespace: cpg-examples-patient-community
spec:
  ports:
    - port: 8085
      protocol: TCP
      targetPort: 8085
      name: rest
  selector:
    app: group-phr-controller
---
apiVersion: extensions/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
  name: group-phr-controller
  namespace: cpg-examples-patient-community
spec:
  rules:
    - host: group-phr-controller-v1.aks.clouditor.io
      http:
        paths:
          - backend:
              serviceName: group-phr-controller
              servicePort: rest
            path: /
