kubernetes/phr-manager.yml
#### phr-manager #####
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phr-manager
  name: phr-manager
  namespace: cpg-examples-patient-community
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phr-manager
  template:
    metadata:
      labels:
        app: phr-manager
    spec:
      containers:
        - image: ghcr.io/clouditor/examples-phr-manager-v1
          imagePullPolicy: Always
          name: phr-manager
          ports:
            - containerPort: 8083
          securityContext:
            runAsUser: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: phr-manager
  namespace: cpg-examples-patient-community
spec:
  ports:
    - port: 8083
      protocol: TCP
      targetPort: 8083
      name: rest
  selector:
    app: phr-manager
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
  name: phr-manager
  namespace: cpg-examples-patient-community
spec:
  rules:
    - host: phr-manager-v1.aks.clouditor.io
      http:
        paths:
          - backend:
              serviceName: phr-manager
              servicePort: rest
            path: /
