kubernetes/statistics.yml
#### statistics #####
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: statistics
  name: statistics
  namespace: cpg-examples-patient-community
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statistics
  template:
    metadata:
      labels:
        app: statistics
    spec:
      containers:
        - image: ghcr.io/clouditor/examples-statistics-v1
          imagePullPolicy: Always
          name: statistics
          ports:
            - containerPort: 8084
          securityContext:
            runAsUser: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: statistics
  namespace: cpg-examples-patient-community
spec:
  ports:
    - port: 8084
      protocol: TCP
      targetPort: 8084
      name: rest
  selector:
    app: statistics
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
  name: statistics
  namespace: cpg-examples-patient-community
spec:
  rules:
    - host: statistics-v1.aks.clouditor.io
      http:
        paths:
          - backend:
              serviceName: statistics
              servicePort: rest
            path: /
